--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -37,15 +37,17 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_gravity="center"
                     android:text="@string/status" />
 
                 <TextView
                     android:id="@+id/connection_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
                     android:textAllCaps="true"
+                    android:text="DISCONNECTED"
+                    android:layout_marginLeft="5dp"
+                    android:layout_gravity="center"
                     android:textColor="@color/black"
                     android:textStyle="bold" />
 
