--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -21,38 +21,76 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.024">
 
-        <Button
-            android:layout_width="wrap_content"
+        <ProgressBar
+            android:id="@+id/progressbar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:onClick="getCarbonData1"
-            android:backgroundTint="?android:textColorPrimary"
-            android:text="View Carbon data" />
+            android:indeterminate="true"
+            android:max="100"
+            android:visibility="gone"
+            android:backgroundTint="@color/white"
+            android:indeterminateTint="#1a09d6"
+            android:layout_marginTop="-7dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/carbonDataButton"
+                android:onClick="getCarbonData"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="?android:textColorPrimary"
+                android:layout_marginHorizontal="5dp"
+                android:text="Carbon data" />
+
+            <Button
+                android:id="@+id/estimateCarbon"
+                android:onClick="estimateCarbon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="?android:textColorPrimary"
+                android:layout_marginHorizontal="5dp"
+                android:text="Estimate carbon" />
+
+        </LinearLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/headerText"
-                android:visibility="invisible"
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_gravity="center"
                 android:textSize="20sp"
+                android:textColor="@color/white"
+                android:layout_marginHorizontal="100dp"
                 android:text="CO2 DETAILS"/>
 
             <ScrollView
                 android:id="@+id/homepageSV"
                 android:layout_width="match_parent"
                 android:layout_height="400dp"
-                android:measureAllChildren="true"
+                android:layout_margin="5dp"
+                android:background="#FA1212"
+                android:backgroundTint="#61000000"
                 android:isScrollContainer="true"
-                android:scrollbars="vertical"
+                android:measureAllChildren="true"
                 android:scrollbarSize="20dp"
-                android:layout_margin="5dp">
+                android:scrollbars="vertical">
 
                 <LinearLayout
                     android:id="@+id/homepageLL"
@@ -66,6 +104,7 @@
 
 
         </LinearLayout>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
