Speech recognition feature added

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -30,4 +30,11 @@
         android:onClick="menu"
         app:showAsAction="ifRoom"/>
 
+    <item android:id="@+id/speech_mic_btn"
+        android:icon="@mipmap/speech_mic_night"
+        android:title="Voice"
+        android:titleCondensed="Voice"
+        android:onClick="menu"
+        app:showAsAction="always"/>
+
 </menu>
